--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -47,7 +47,7 @@
         top: 30px;
         width: 114px;
         height: 169px;
-        border:1px solid black;
+        box-shadow: 0 4px 35px rgba(168, 172, 176, 0.19);
         .currency-list-items{
           list-style-type: none;
           padding: 0;
@@ -56,7 +56,8 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            &:nth-child(even){
+            cursor: pointer;
+            &.active{
               background: #EEEEEE;
             }
           }
