--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: relative;
   ul.Nav__item-wrapper{
     list-style-type: none;
     display: flex;
@@ -114,4 +115,11 @@
       }
     }
   }
+}
+.shade{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 3;
+  background: rgba(57, 55, 72, 0.22);
 }
