--- a/src/modules/Product/index.scss
+++ b/src/modules/Product/index.scss
@@ -112,9 +112,17 @@
       line-height: 19px;
       letter-spacing: 0;
       text-align: center;
+      margin-bottom: 40px;
     }
-    .description{
-      margin-top: 40px;
+    .description, .description h1, .description p{
+      margin: 0;
+      font-family: Roboto, sans-serif;
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 26px;
+      letter-spacing: 0;
+      text-align: left;
+      width: 292px;
     }
   }
 }
