--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -97,21 +97,165 @@
         background: #FFF;
         padding: 32px 16px;
         right: 0;
-        .view-cart-btn{
-          width: 292px;
-          height: 52px;
-          background: #5ECE7B;
-          border: none;
-          font-family: Raleway, sans-serif;
-          font-size: 14px;
-          font-weight: 600;
-          line-height: 17px;
+        width: 293px;
+        .bag-items-amount{
+          font-family: Raleway,sans-serif;
+          font-size: 16px;
+          line-height: 26px;
           letter-spacing: 0;
-          text-align: center;
-          .cart-link{
-            text-transform: uppercase;
-            color: #FFF;
-            text-decoration: none;
+          text-align: left;
+          margin: 32px 0;
+          &span:first-child{
+            font-weight: 700;
+          }
+          &span:nth-child(2){
+            font-weight: 500;
+          }
+        }
+        .cart-product-wrapper{
+          display: flex;
+          justify-content: space-between;
+          //row-gap: 40px;
+          margin-bottom: 40px;
+          .cart-product-info{
+            width: 136px;
+            .brand, .name{
+              margin: 0;
+              font-family: Raleway,sans-serif;
+              font-size: 16px;
+              font-weight: 300;
+              line-height: 26px;
+              letter-spacing: 0;
+              text-align: left;
+              color: #1D1F22;
+            }
+            .price{
+              font-family: Raleway, sans-serif;
+              font-size: 16px;
+              font-weight: 500;
+              line-height: 26px;
+              letter-spacing: 0;
+              text-align: left;
+              color: #1D1F22;
+              margin: 4px 0 8px 0;
+            }
+            .caption{
+              font-family: Raleway, sans-serif;
+              font-size: 14px;
+              font-weight: 400;
+              line-height: 16px;
+              letter-spacing: 0;
+              text-align: left;
+              color: #1D1F22;
+              margin: 0 0 8px;
+            }
+            .size-wrapper{
+              display: flex;
+              column-gap: 8px;
+              margin-bottom: 24px;
+              .size{
+                height: 24px;
+                width: 24px;
+                border: 1px solid #1D1F22;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                font-family: Source Sans Pro, sans-serif;
+                font-size: 14px;
+                font-weight: 400;
+                line-height: 22px;
+                letter-spacing: 0;
+                cursor: pointer;
+                &.active{
+                  background: black;
+                  color:white;
+                }
+              }
+            }
+            .color-wrapper{
+              display: flex;
+              column-gap: 8px;
+              margin-bottom: 36px;
+              .border{
+                border: 1px solid transparent;
+                padding: 1px;
+                &.active{
+                  border: 1px solid #5ECE7B !important;
+                }
+              }
+              .color{
+                width: 16px;
+                height: 16px;
+              }
+            }
+          }
+          .cart-product-actions{
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            button{
+              width: 24px;
+              height: 24px;
+              background: #FFF;
+              border: 1px solid #1D1F22;
+              color: #1D1F22;
+            }
+          }
+        img{
+          width: 121px;
+          height: 190px;
+          object-fit: cover;
+        }
+      }
+        .cart-btns{
+          display: flex;
+          justify-content: space-between;
+          .check-out-btn, .view-cart-btn{
+            width: 140px;
+            height: 43px;
+            font-family: Raleway,sans-serif;
+            font-size: 14px;
+            font-weight: 600;
+            line-height: 17px;
+            letter-spacing: 0;
+            text-align: center;
+            .cart-link{
+              text-transform: uppercase;
+              text-decoration: none;
+            }
+          }
+          .view-cart-btn{
+            background: #FFF;
+            border: 1px solid #1D1F22;
+            .cart-link{
+              color: #1D1F22;
+            }
+          }
+          .check-out-btn{
+            background: #5ECE7B;
+            border: none;
+            .cart-link{
+              color: #FFF;
+            }
+          }
+        }
+        .cart-products-total-price{
+          display: flex;
+          justify-content: space-between;
+          margin-bottom: 32px;
+          .total-price-caption{
+            font-family: Roboto, sans-serif;
+            font-size: 16px;
+            font-weight: 500;
+            line-height: 18px;
+            letter-spacing: 0;
+          }
+          .total-price{
+            font-family: Raleway,sans-serif;
+            font-size: 16px;
+            font-weight: 700;
+            line-height: 26px;
+            letter-spacing: 0;
           }
         }
       }
