--- a/src/modules/Cart/index.scss
+++ b/src/modules/Cart/index.scss
@@ -1,3 +1,13 @@
 .cart-wrapper{
-
+padding: 80px 100px;
+  .caption{
+    font-family: Raleway, sans-serif;
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 40px;
+    letter-spacing: 0;
+    text-align: left;
+    color: #1D1F22;
+    margin: 0 0 55px;
+  }
 }
