--- a/src/components/CartProducts/index.scss
+++ b/src/components/CartProducts/index.scss
@@ -2,7 +2,8 @@
   display: flex;
   justify-content: space-between;
   //row-gap: 40px;
-  margin-bottom: 40px;
+  //margin-bottom: 40px;
+  padding: 24px 0;
   .cart-product-info{
     width: 136px;
     .brand, .name{
@@ -61,7 +62,7 @@
     .color-wrapper{
       display: flex;
       column-gap: 8px;
-      margin-bottom: 36px;
+      //margin-bottom: 36px;
       .border{
         border: 1px solid transparent;
         padding: 1px;
@@ -75,21 +76,89 @@
       }
     }
   }
-  .cart-product-actions{
+  .product-image-with-actions{
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    button{
-      width: 24px;
-      height: 24px;
-      background: #FFF;
-      border: 1px solid #1D1F22;
-      color: #1D1F22;
+    column-gap: 8px;
+    .cart-product-actions{
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      button{
+        width: 24px;
+        height: 24px;
+        background: #FFF;
+        border: 1px solid #1D1F22;
+        color: #1D1F22;
+      }
     }
+    img{
+      width: 121px;
+      height: 190px;
+      object-fit: cover;
+    }
+
   }
-  img{
-    width: 121px;
-    height: 190px;
-    object-fit: cover;
-  }
+  &.big{
+    .cart-product-info{
+      width: 292px;
+      .brand{
+        font-size: 30px;
+        font-weight: 600;
+        line-height: 27px;
+        margin-bottom: 16px;
+      }
+      .name{
+        font-size: 30px;
+        font-weight: 400;
+        line-height: 27px;
+        margin-bottom: 20px;
+      }
+      .price{
+        font-size: 24px;
+        font-weight: 700;
+        line-height: 24px;
+        margin-bottom: 20px;
+      }
+      .caption{
+        font-family: Roboto Condensed, sans-serif;
+        font-size: 18px;
+        font-weight: 700;
+        line-height: 18px;
+      }
+      .size-wrapper{
+        margin-bottom: 16px;
+        .size{
+          height: 45px;
+          width: 63px;
+          font-size: 16px;
+          font-weight: 400;
+          line-height: 18px;
+          letter-spacing: 0.05em;
+        }
+      }
+      .color-wrapper{
+        column-gap: 8px;
+        .color{
+          width: 32px;
+          height: 32px;
+        }
+      }
+    }
+    .product-image-with-actions{
+      column-gap: 24px;
+      img{
+        height: 288px;
+        width: 200px;
+        object-fit: cover;
+      }
+      button{
+        width: 45px;
+        height: 45px;
+      }
+    }
+}
+}
+.separator{
+  border: 1px solid #E5E5E5;
+  margin: 0;
 }
