--- a/src/modules/Cart/index.scss
+++ b/src/modules/Cart/index.scss
@@ -10,4 +10,41 @@ padding: 80px 100px;
     color: #1D1F22;
     margin: 0 0 55px;
   }
+  .total{
+    text-align: left;
+    padding: 24px 0;
+    .tax, .quantity{
+      font-family: Raleway, sans-serif;
+      font-size: 24px;
+      font-weight: 400;
+      line-height: 28px;
+      margin: 8px 0 0;
+      span {
+       font-weight: 700;
+     }
+    }
+    .price{
+      font-family: Raleway, sans-serif;
+      font-size: 24px;
+      font-weight: 500;
+      line-height: 28px;
+      margin: 8px 0 0;
+      span {
+        font-weight: 700;
+      }
+    }
+    button.order{
+      background: #5ECE7B;
+      color: #FFF;
+      border: none;
+      height: 43px;
+      width: 279px;
+      font-family: Raleway, sans-serif;
+      font-size: 14px;
+      font-weight: 600;
+      line-height: 17px;
+      letter-spacing: 0;
+      margin-top: 16px;
+    }
+  }
 }
