--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -169,7 +169,7 @@
 }
 .shade{
   width: 100%;
-  height: 100%;
+  height: calc(100% - 78px);
   position: absolute;
   z-index: 3;
   background: rgba(57, 55, 72, 0.22);
