--- a/src/components/CartProducts/index.scss
+++ b/src/components/CartProducts/index.scss
@@ -36,13 +36,13 @@
       color: #1D1F22;
       margin: 0 0 8px;
     }
-    .size-wrapper{
+    .text-attribute-wrapper{
       display: flex;
       column-gap: 8px;
       margin-bottom: 24px;
-      .size{
-        height: 24px;
-        width: 24px;
+      .text-attribute{
+        height: 25px;
+        min-width: 25px;
         border: 1px solid #1D1F22;
         display: flex;
         justify-content: center;
@@ -58,11 +58,16 @@
           color:white;
         }
       }
+      &.rectangle{
+        .text-attribute{
+          width: 48px;
+        }
+      }
     }
-    .color-wrapper{
+    .swatch-attribute-wrapper{
       display: flex;
       column-gap: 8px;
-      //margin-bottom: 36px;
+      margin-bottom: 24px;
       .border{
         border: 1px solid transparent;
         padding: 1px;
@@ -70,7 +75,7 @@
           border: 1px solid #5ECE7B !important;
         }
       }
-      .color{
+      .swatch-attribute{
         width: 16px;
         height: 16px;
       }
