--- a/src/modules/Product/index.scss
+++ b/src/modules/Product/index.scss
@@ -72,11 +72,11 @@
       text-transform: uppercase;
       margin: 0 0 8px;
     }
-    .size-wrapper{
+    .text-attribute-wrapper{
       display: flex;
       column-gap: 12px;
       margin-bottom: 24px;
-      .size{
+      .text-attribute{
         height: 45px;
         width: 63px;
         border: 1px solid #1D1F22;
@@ -95,7 +95,7 @@
         }
       }
     }
-    .color-wrapper{
+    .swatch-attribute-wrapper{
       display: flex;
       column-gap: 8px;
       margin-bottom: 36px;
@@ -106,7 +106,7 @@
           border: 1px solid #5ECE7B !important;
         }
       }
-      .color{
+      .swatch-attribute{
         width: 32px;
         height: 32px;
       }
