--- a/src/modules/Product/index.scss
+++ b/src/modules/Product/index.scss
@@ -1,60 +1,72 @@
-.product-wrapper{
+.product-wrapper {
   padding: 80px 96px;
   align-items: start;
   display: flex;
   column-gap: 100px;
-  .gallery{
+
+  .gallery {
     display: flex;
     column-gap: 40px;
-    .all-img{
+
+    .all-img {
       display: flex;
       flex-direction: column;
       row-gap: 32px;
       height: 511px;
       overflow-x: auto;
-      img{
+
+      img {
         min-height: 80px;
         height: 80px;
         width: 79px;
         object-fit: cover;
       }
+
       &::-webkit-scrollbar {
         width: 2px;
         height: 2px;
       }
+
       &::-webkit-scrollbar-track {
         border-radius: 10px;
-        background: rgba(0,0,0,0.1);
+        background: rgba(0, 0, 0, 0.1);
       }
-      &::-webkit-scrollbar-thumb{
+
+      &::-webkit-scrollbar-thumb {
         border-radius: 10px;
-        background: rgba(0,0,0,0.2);
+        background: rgba(0, 0, 0, 0.2);
       }
-      &::-webkit-scrollbar-thumb:hover{
-        background: rgba(0,0,0,0.4);
+
+      &::-webkit-scrollbar-thumb:hover {
+        background: rgba(0, 0, 0, 0.4);
       }
-      &::-webkit-scrollbar-thumb:active{
-        background: rgba(0,0,0,.9);
+
+      &::-webkit-scrollbar-thumb:active {
+        background: rgba(0, 0, 0, .9);
       }
     }
-    .main-img{
+
+    .main-img {
       height: 511px;
       width: 610px;
       object-fit: cover;
     }
   }
-  .product-info{
+
+  .product-info {
     font-family: Raleway, sans-serif;
     text-align: left;
-    .brand{
+
+    .brand {
       margin: 0;
       font-size: 30px;
       font-weight: 600;
       line-height: 27px;
       letter-spacing: 0;
       color: #1D1F22;
-  }
-    .name{
+    }
+
+    .name {
       font-size: 30px;
       font-weight: 400;
       line-height: 27px;
@@ -62,7 +74,8 @@
       color: #1D1F22;
       margin: 16px 0 43px 0;
     }
-    .caption{
+
+    .caption {
       font-family: Roboto Condensed, sans-serif;
       font-size: 18px;
       font-weight: 700;
@@ -72,11 +85,13 @@
       text-transform: uppercase;
       margin: 0 0 8px;
     }
-    .text-attribute-wrapper{
+
+    .text-attribute-wrapper {
       display: flex;
       column-gap: 12px;
       margin-bottom: 24px;
-      .text-attribute{
+
+      .text-attribute {
         height: 45px;
         width: 63px;
         border: 1px solid #1D1F22;
@@ -89,29 +104,35 @@
         line-height: 18px;
         letter-spacing: 0.05em;
         cursor: pointer;
-        &.active{
+
+        &.active {
           background: black;
-          color:white;
+          color: white;
         }
       }
     }
-    .swatch-attribute-wrapper{
+
+    .swatch-attribute-wrapper {
       display: flex;
       column-gap: 8px;
       margin-bottom: 36px;
-      .border{
+
+      .border {
         border: 1px solid transparent;
         padding: 1px;
-        &.active{
+
+        &.active {
           border: 1px solid #5ECE7B !important;
         }
       }
-      .swatch-attribute{
+
+      .swatch-attribute {
         width: 32px;
         height: 32px;
       }
     }
-    .price{
+
+    .price {
       font-family: Raleway, sans-serif;
       font-size: 24px;
       font-weight: 700;
@@ -120,7 +141,8 @@
       text-align: left;
       margin: 0 0 20px;
     }
-    .add-cart-btn{
+
+    .add-cart-btn {
       width: 292px;
       height: 52px;
       background: #5ECE7B;
@@ -135,7 +157,8 @@
       text-align: center;
       margin-bottom: 40px;
     }
-    .description, .description h1, .description p{
+
+    .description, .description h1, .description p {
       margin: 0;
       font-family: Roboto, sans-serif;
       font-size: 16px;
