--- a/src/components/CartProducts/index.scss
+++ b/src/components/CartProducts/index.scss
@@ -1,195 +1,157 @@
-.cart-product-wrapper {
-  display: flex;
-  justify-content: space-between;
-  padding: 24px 0;
-
-  .cart-product-info {
-    width: 136px;
-
-    .brand, .name {
-      margin: 0;
-      font-family: Raleway, sans-serif;
-      font-size: 16px;
-      font-weight: 300;
-      line-height: 26px;
-      letter-spacing: 0;
-      text-align: left;
-      color: #1D1F22;
-    }
-
-    .price {
-      font-family: Raleway, sans-serif;
-      font-size: 16px;
-      font-weight: 500;
-      line-height: 26px;
-      letter-spacing: 0;
-      text-align: left;
-      color: #1D1F22;
-      margin: 4px 0 8px 0;
-    }
-
-    .caption {
-      font-family: Raleway, sans-serif;
-      font-size: 14px;
-      font-weight: 400;
-      line-height: 16px;
-      letter-spacing: 0;
-      text-align: left;
-      color: #1D1F22;
-      margin: 0 0 8px;
-    }
-
-    .text-attribute-wrapper {
-      display: flex;
-      column-gap: 8px;
-      margin-bottom: 24px;
-
-      .text-attribute {
-        height: 25px;
-        min-width: 25px;
-        border: 1px solid #1D1F22;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-family: Source Sans Pro, sans-serif;
-        font-size: 14px;
-        font-weight: 400;
-        line-height: 22px;
-        letter-spacing: 0;
-        cursor: pointer;
-
-        &.active {
-          background: black;
-          color: white;
-        }
-      }
-
-      &.rectangle {
-        .text-attribute {
-          width: 48px;
-        }
-      }
-    }
-
-    .swatch-attribute-wrapper {
-      display: flex;
-      column-gap: 8px;
-      margin-bottom: 24px;
-
-      .border {
-        border: 1px solid transparent;
-        padding: 1px;
-
-        &.active {
-          border: 1px solid #5ECE7B !important;
-        }
-      }
-
-      .swatch-attribute {
-        width: 16px;
-        height: 16px;
-      }
-    }
+.cart-products-wrapper {
+  max-height: 60vh;
+  overflow-y: auto;
+  &::-webkit-scrollbar {
+    width: 2px;
+    height: 2px;
   }
 
-  .product-image-with-actions {
+  &::-webkit-scrollbar-track {
+    border-radius: 10px;
+    background: rgba(0, 0, 0, 0.1);
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background: rgba(0, 0, 0, 0.2);
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background: rgba(0, 0, 0, 0.4);
+  }
+
+  &::-webkit-scrollbar-thumb:active {
+    background: rgba(0, 0, 0, .9);
+  }
+  .cart-product-wrapper {
     display: flex;
-    column-gap: 8px;
+    justify-content: space-between;
+    padding: 24px 0;
 
-    .cart-product-actions {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-
-      button {
-        width: 24px;
-        height: 24px;
-        background: #FFF;
-        border: 1px solid #1D1F22;
-        color: #1D1F22;
-      }
-    }
-
-    img {
-      width: 121px;
-      height: 190px;
-      object-fit: cover;
-    }
-
-  }
-
-  &.big {
     .cart-product-info {
-      width: 292px;
+      width: 136px;
 
-      .brand {
-        font-size: 30px;
-        font-weight: 600;
-        line-height: 27px;
-        margin-bottom: 16px;
-      }
-
-      .name {
-        font-size: 30px;
-        font-weight: 400;
-        line-height: 27px;
-        margin-bottom: 20px;
+      .brand, .name {
+        margin: 0;
+        font-family: Raleway, sans-serif;
+        font-size: 16px;
+        font-weight: 300;
+        line-height: 26px;
+        letter-spacing: 0;
+        text-align: left;
+        color: #1D1F22;
       }
 
       .price {
-        font-size: 24px;
-        font-weight: 700;
-        line-height: 24px;
-        margin-bottom: 20px;
-      }
-
-      .caption {
-        font-family: Roboto Condensed, sans-serif;
-        font-size: 18px;
-        font-weight: 700;
-        line-height: 18px;
-      }
-
-      .size-wrapper {
-        margin-bottom: 16px;
-
-        .size {
-          height: 45px;
-          width: 63px;
-          font-size: 16px;
-          font-weight: 400;
-          line-height: 18px;
-          letter-spacing: 0.05em;
-        }
-      }
-
-      .color-wrapper {
-        column-gap: 8px;
-
-        .color {
-          width: 32px;
-          height: 32px;
-        }
+        font-family: Raleway, sans-serif;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 26px;
+        letter-spacing: 0;
+        text-align: left;
+        color: #1D1F22;
+        margin: 4px 0 8px 0;
       }
     }
 
     .product-image-with-actions {
-      column-gap: 24px;
+      display: flex;
+      column-gap: 8px;
 
-      img {
-        height: 288px;
-        width: 200px;
-        object-fit: cover;
+      .cart-product-actions {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+
+        button {
+          width: 24px;
+          height: 24px;
+          background: #FFF;
+          border: 1px solid #1D1F22;
+          color: #1D1F22;
+        }
       }
 
-      button {
-        width: 45px;
-        height: 45px;
+      img {
+        width: 121px;
+        height: 190px;
+        object-fit: contain;
+      }
+
+    }
+
+    &.big {
+      .cart-product-info {
+        width: 292px;
+
+        .brand {
+          font-size: 30px;
+          font-weight: 600;
+          line-height: 27px;
+          margin-bottom: 16px;
+        }
+
+        .name {
+          font-size: 30px;
+          font-weight: 400;
+          line-height: 27px;
+          margin-bottom: 20px;
+        }
+
+        .price {
+          font-size: 24px;
+          font-weight: 700;
+          line-height: 24px;
+          margin-bottom: 20px;
+        }
+
+        .caption {
+          font-family: Roboto Condensed, sans-serif;
+          font-size: 18px;
+          font-weight: 700;
+          line-height: 18px;
+        }
+
+        .size-wrapper {
+          margin-bottom: 16px;
+
+          .size {
+            height: 45px;
+            width: 63px;
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 18px;
+            letter-spacing: 0.05em;
+          }
+        }
+
+        .color-wrapper {
+          column-gap: 8px;
+
+          .color {
+            width: 32px;
+            height: 32px;
+          }
+        }
+      }
+
+      .product-image-with-actions {
+        column-gap: 24px;
+
+        img {
+          height: 288px;
+          width: 200px;
+          object-fit: cover;
+        }
+
+        button {
+          width: 45px;
+          height: 45px;
+        }
       }
     }
   }
 }
-
 .separator {
   border: 1px solid #E5E5E5;
   margin: 0;
