fix(main): fixed attributes issues

--- a/src/components/Attributes/index.scss
+++ b/src/components/Attributes/index.scss
@@ -27,7 +27,7 @@
       font-weight: 400;
       line-height: 18px;
       letter-spacing: 0.05em;
-      cursor: pointer;
+      //cursor: pointer;
 
       &.active {
         background: black;
