--- a/src/modules/Product/index.scss
+++ b/src/modules/Product/index.scss
@@ -110,6 +110,7 @@
       letter-spacing: 0;
       text-align: center;
       margin-bottom: 40px;
+      cursor: pointer;
     }
 
     .description, .description h1, .description p {
