--- a/src/modules/Category/index.scss
+++ b/src/modules/Category/index.scss
@@ -18,6 +18,7 @@
     grid-template-columns: repeat(auto-fill, 500px);
     grid-column-gap: 40px;
     grid-row-gap: 103px;
+    justify-content: center;
 
     .product {
       padding: 16px;
