--- a/src/modules/Category/index.scss
+++ b/src/modules/Category/index.scss
@@ -4,6 +4,7 @@
 
   .category-name {
     font-family: Raleway, sans-serif;
+    text-transform: capitalize;
     font-size: 42px;
     font-weight: 400;
     line-height: 67px;
